--- a/FlickrApp/en.lproj/MainStoryboard_iPad.storyboard
+++ b/FlickrApp/en.lproj/MainStoryboard_iPad.storyboard
@@ -72,7 +72,6 @@
                     </navigationItem>
                     <connections>
                         <segue destination="5Gi-cV-eyt" kind="push" identifier="Get Recent Photos for Location" id="cyq-C8-o1t"/>
-                        <segue destination="PSH-cc-uL0" kind="push" identifier="get photo map for location" id="uAv-Tl-rYB"/>
                     </connections>
                 </tableViewController>
             </objects>
@@ -116,7 +115,7 @@
                     </connections>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="1316" y="-1487"/>
+            <point key="canvasLocation" x="1242" y="-1858"/>
         </scene>
         <!--Recent Photos Table View Controller - Root View Controller-->
         <scene sceneID="89v-rq-vmW">
@@ -159,7 +158,7 @@
                     <navigationItem key="navigationItem" title="Root View Controller" id="9uq-0t-JCf"/>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="766" y="-308"/>
+            <point key="canvasLocation" x="770" y="-868"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="4kY-Jd-BMY">
@@ -175,7 +174,7 @@
                     </connections>
                 </navigationController>
             </objects>
-            <point key="canvasLocation" x="354" y="-308"/>
+            <point key="canvasLocation" x="358" y="-868"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ox9-FF-1gy">
@@ -208,36 +207,29 @@
             </objects>
             <point key="canvasLocation" x="-1509" y="-808"/>
         </scene>
-        <!--Map View Controller-->
+        <!--Map View Controller - Item-->
         <scene sceneID="HlD-lK-vrx">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jHC-ck-XfH" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="PSH-cc-uL0" customClass="mapViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ryo-p1-Q2v">
-                        <rect key="frame" x="0.0" y="64" width="320" height="739"/>
+                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="kxm-4N-UPF">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="739"/>
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" id="Eo9-LM-KsX">
-                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="012-ow-0RH">
-                            <connections>
-                                <action selector="refresh:" destination="jnE-0O-dVj" id="B1K-ui-dcP"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <tabBarItem key="tabBarItem" title="Item" id="eaG-jt-ie5"/>
                     <connections>
                         <outlet property="mapView" destination="kxm-4N-UPF" id="jra-7M-bQQ"/>
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1316" y="-2435"/>
+            <point key="canvasLocation" x="-571" y="-2581"/>
         </scene>
         <!--Flickr Image View Controller-->
         <scene sceneID="6pK-rx-X0v">
@@ -295,9 +287,43 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="-580" y="319"/>
+            <point key="canvasLocation" x="-576" y="-241"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="FlickrImageViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FlickrImageViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="spinner" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="toolBarTitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+        <class className="PhotoListTableController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotoListTableController.h"/>
+            <relationships>
+                <relationship kind="action" name="refresh:"/>
+                <relationship kind="outlet" name="refreshButton" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="PhotosFromLocationTableViewController" superclassName="PhotoListTableController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotosFromLocationTableViewController.h"/>
+        </class>
+        <class className="RecentPhotosTableViewController" superclassName="PhotoListTableController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RecentPhotosTableViewController.h"/>
+        </class>
+        <class className="TopPlacesTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPlacesTableViewController.h"/>
+        </class>
+        <class className="mapViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/mapViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
